# mads-rag

./: .gitignore  Dockerfile  README.md  app.py  compose.yaml  makefile  pyproject.toml
notebooks/: 1.0-kve-extracting.ipynb
scripts/: setup_and_build.sh
src/rag/: main.py
src/rag/common/: config.py
src/rag/core/: extracting.py  generating.py  indexing.py  retrieving.py
